namespace java com.ninlgde.rpc.thrift

exception UserNotFoundException {
	1: string code;
	2: string message;
}